[workspace]
members=["imputio", "imputio-utils", "examples"]
resolver = "2"

[workspace.package]
name = "imputio"
version = "0.2.0"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[workspace.dependencies]
futures-lite = "2.6.0"
flume = "0.11.1"
tracing = "0.1.41"
thiserror = "1.0.59"
imputio = { path = "./imputio"}
imputio-utils= {path="./imputio-utils"}