[workspace]
members=["imputio", "imputio-utils", "examples", "benches"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[workspace.dependencies]
futures-lite = "2.6.0"
flume = {version="0.11.1", features=["eventual-fairness", "async", "select"]}
tracing = "0.1.41"
thiserror = "2.0.11"
mio = {version="1.0.3", features=["net", "os-ext", "os-poll"]}
slab = "0.4.9"
core_affinity = "0.8.1"
imputio = { path = "./imputio"}
imputio-utils= {path="./imputio-utils"}