[package]
name = "imputio"
version = "0.2.2"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
futures-lite.workspace=true
flume.workspace=true
tracing.workspace=true
thiserror.workspace=true
rand = {version = "0.9.0", optional=true}

[features]
default=[]
fairness=["dep:rand"]