[package]
name = "imputio"
version = "0.3.0"
edition = "2024"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
futures-lite.workspace=true
flume.workspace=true
tracing.workspace=true
thiserror.workspace=true
mio.workspace=true
slab.workspace=true
rand = {version = "0.9.0", optional=true}
derive_builder = "0.20.2"
arc-swap = "1.7.1"
core_affinity.workspace=true
tikv-jemallocator = {workspace = true, optional=true}

[dev-dependencies]
libc="*"

[features]
default=["tikv-jemallocator", "io"]
fairness=["dep:rand"]
tikv-jemallocator=["dep:tikv-jemallocator"]
io=[]